      IP, IPv6: Fix setting the snapshot length for the payload.
      IP: Use ND_TTEST_LEN() instead of a custom bounds check.
      frag6: Add a bounds check in non-verbose mode.
      PTP: Remove spaces before colons in output.
      PTP: Fix management packet fields.
    User interface:
      Warn that options -A, -x[x] and -X[X] are mutually exclusive.
    Source code:
      Fix '-tt' option printing when time > 2106-02-07T06:28:15Z.
      Add sub-second packet timestamp checks for invalid micro/nano.
      Remove unused missing/snprintf.c.
    Windows:
      Fixed to find wpcap.dll if WinPcap isn't installed and Npcap was
        installed without the WinPcap API compatibility option. (GitHub
        issue #1226).
    Building and testing:
      Makefile.in: Use a local libpcap in the releasecheck target.
      CMake: Fix build with CMake 3.31.
      autotools, CMake: don't separately test whether snprintf(3) is
        available and whether it's suitable - the test for whether it's
        suitable also fails if it's unavailable.
      CMake: Skip snprintf(3) tests when cross-compiling.
      autotools, CMake: fix issues with snprintf test and sanitizers.
      CMake: check whether check_c_source_runs() works, treat the build
        as a cross-compile if it doesn't work.

Friday, August 30, 2024 / The Tcpdump Group
  Summary for 4.99.5 tcpdump release
    Refine protocol decoding for:
      Arista: Use the test .pcap file from pull request #955 (HwInfo).
      BGP: Fix an undefined behavior when it tries to parse a too-short packet.
      CARP: Print the protocol name before any GET_().
      CDP: only hex-dump unknown TLVs in verbose mode.
      DHCP: parse the SZTP redirect tag.
      DHCPv6: client-id/server-id DUID type 2 correction; parse the user class,
        boot file URL, and SZTP redirect options; add DUID-UUID printing
        (RFC6355).
      DNS: Detect and correctly handle too-short URI RRs.